Moved timer start point. Fixed silly bug where onclick was used in place of onchange. Moved log header outside log content so it doesn't scroll out of view.

--- a/fractal.css
+++ b/fractal.css
@@ -48,9 +48,9 @@ log {
 
 logheader {
 	display: block;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
-	width: 100%;
+	width: 30em;
 	background-color: #ededed;
 	border: 1px solid #b6b6b6;
 	box-sizing: border-box;
